--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -42,7 +42,7 @@ jobs:
 
             PACKAGE_VERSION=$(node -p "require('./package.json').version")
             dotnet pack $CONFIG_SOLUTION /p:PackageVersion=$PACKAGE_VERSION -o ../../ -c release
-            dotnet nuget push *.nupkg -k $API_KEY
+            dotnet nuget push *.nupkg -k $nuget_api_key
 
             print_title "git tag"
             git tag $PACKAGE_VERSION
