--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jonathansant/external-sqs-stream-provider",
-  "version": "0.1.0",
+  "version": "0.1.0-beta1",
   "scripts": {
     "pack": "bash ./tools/pack.sh",
     "prepublish:dev": "npm run pack",
