--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "pack": "bash ./tools/pack.sh",
     "prepublish:dev": "npm run pack",
-    "publish:dev": "dotnet nuget push *.nupkg -k jonathan-nuget",
+    "publish:dev": "dotnet nuget push *.nupkg -k $nuget_api_key",
     "postpublish:dev": "rm -rf *.nupkg",
     "test": "cd test && dotnet xunit"
   }
